Fixed bug #26697 (calling class_exists on a nonexistent class in __autoload results in segfault).